--- a/index.html
+++ b/index.html
@@ -2,14 +2,108 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MSOpenTech | Github</title>
+	<link rel="stylesheet" href="css/normal.css" />
 	<link rel="stylesheet" href="css/global.css" />
+	<script type="text/javascript" src="js/msscript.js"></script>
 </head>
 <body>
 	<div class="page-wrap">
-		<img src="images/MSOpenTech_Logo.jpg" alt="MS Open Tech Logo"/>
-		<h1>Welcome to the Microsoft Open Technologies Github Site</h1>
-		<h2>Coming Soon!</h2>
-		<a href="http://msopentech.com">MSOpenTech.com<a/>
-	</div>
+		<header>
+			<div class="logo"></div>
+			<h1>Github Repository</h1>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="home">home</a></li>
+				<li><a href="repositories">repositories</a></li>
+				<li><a href="committimeline">commit timeline</a></li>
+				<li><a href="mailinglists">mailing lists</a></li>
+				<li><a href="aroundtheweb">around the web</a></li>
+				<li><a href="blog">blog</a></li>
+			</ul>
+		</nav>
+		
+		<div class="repository-thumbs">
+			
+			<!-- will need to create these dynamically -->
+			<div class="repo-single-thumb">
+				
+			</div><!-- repo single thumb -->
+
+			<!-- end single repo thumbs -->
+
+		</div><!-- repository thumbs -->
+		<footer>
+			<div class="resources">
+				<div class="resource-cat">
+					<h3>resource title</h3>
+					<ul>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+					</ul>
+				</div><!-- resource cat -->	
+
+				<div class="resource-cat">
+					<h3>resource title</h3>
+					<ul>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+					</ul>
+				</div><!-- resource cat -->	
+
+				<div class="resource-cat">
+					<h3>resource title</h3>
+					<ul>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+					</ul>
+				</div><!-- resource cat -->	
+
+				<div class="resource-cat">
+					<h3>resource title</h3>
+					<ul>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+						<li><a href="#">stuff</a></li>
+					</ul>
+				</div><!-- resource cat -->	
+
+			</div><!-- resources -->
+
+			<div class="policies">
+				<div class="policy-links">
+				<ul>
+					<li><a href="#">contact us</a></li>
+					<li><a href="#">terms of use</a></li>
+					<li><a href="#">privacy policy</a></li>
+				</ul>
+				</div><!-- policy links -->
+
+				<div class="copyright">
+					<ul>
+						<li><a href="#">&copy; 2013 Microsoft Open Technologies, LLC. <small>all rights reserverd</small></a></li>
+					</ul>
+				</div><!-- copyright -->
+			</div><!-- policies -->
+		</footer>
+
+
+
+	</div><!-- page wrap -->
 </body>
 </html>
