completed styling and adding dynamic repo call

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<title>MSOpenTech | Github</title>
 	<link rel="stylesheet" href="css/normal.css" />
 	<link rel="stylesheet" href="css/global.css" />
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/msscript.js"></script>
 </head>
 <body>
-	<div class="page-wrap">
+	<div class="page-wrap group">
 		<header>
 			<div class="logo"></div>
 			<h1>Github Repository</h1>
@@ -22,19 +23,13 @@
 				<li><a href="blog">blog</a></li>
 			</ul>
 		</nav>
+		<div class="repository-thumbs group">
+			<!-- these are created dynamically -->
 		
-		<div class="repository-thumbs">
-			
-			<!-- will need to create these dynamically -->
-			<div class="repo-single-thumb">
-				
-			</div><!-- repo single thumb -->
-
-			<!-- end single repo thumbs -->
 
 		</div><!-- repository thumbs -->
-		<footer>
-			<div class="resources">
+</div><!-- page-wrap -->
+			<div class="resources group">
 				<div class="resource-cat">
 					<h3>resource title</h3>
 					<ul>
@@ -84,10 +79,11 @@
 				</div><!-- resource cat -->	
 
 			</div><!-- resources -->
-
-			<div class="policies">
-				<div class="policy-links">
-				<ul>
+		
+		<footer >
+			<div class="policies group">
+				<div class="policy-links group">
+				<ul class="group">
 					<li><a href="#">contact us</a></li>
 					<li><a href="#">terms of use</a></li>
 					<li><a href="#">privacy policy</a></li>
@@ -101,9 +97,5 @@
 				</div><!-- copyright -->
 			</div><!-- policies -->
 		</footer>
-
-
-
-	</div><!-- page wrap -->
 </body>
 </html>
