adding random triangles via css and js in the backgrounds

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="home">home</a></li>
-				<li><a href="repositories">repositories</a></li>
-				<li><a href="committimeline">commit timeline</a></li>
-				<li><a href="mailinglists">mailing lists</a></li>
-				<li><a href="aroundtheweb">around the web</a></li>
-				<li><a href="blog">blog</a></li>
+				<li><a href="https://msopentech.github.io">Home</a></li>
+				<li><a href="https://github.com/MSOpenTech">Repositories</a></li>
+				<li><a href="http://msopentech.com">MS OpenTech</a></li>
+				<li><a href="https://github.com/MSOpenTech?tab=members">Members</a></li>
+				<li><a href="http://msopentech.com/blog">Blog</a></li>
 			</ul>
 		</nav>
 		<div class="repository-thumbs group">
