--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="https://msopentech.github.io">Home</a></li>
+				<li><a href="http://msopentech.github.io/">Home</a></li>
 				<li><a href="https://github.com/MSOpenTech">Repositories</a></li>
 				<li><a href="http://msopentech.com">MS OpenTech</a></li>
 				<li><a href="https://github.com/MSOpenTech?tab=members">Members</a></li>
