--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="page-wrap group">
 		<header>
 			<div class="logo"></div>
-			<h1>Github Repository</h1>
+			<h1>Github Repositories</h1>
 		</header>
 		<nav>
 			<ul>
