adding group class to clear floats on main navigation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h1>Github Repositories</h1>
 		</header>
 		<nav>
-			<ul>
+			<ul class="group">
 				<li><a href="http://msopentech.github.io/">Home</a></li>
 				<li><a href="https://github.com/MSOpenTech">Repositories</a></li>
 				<li><a href="http://msopentech.com">MS OpenTech</a></li>
