--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<div class="page-wrap group">
 		<header>
 			<div class="logo"></div>
-			<h1>Github Repository</h1>
+			<h1>Github Repositories</h1>
 		</header>
 		<nav>
-			<ul>
-				<li><a href="https://msopentech.github.io">Home</a></li>
+			<ul class="group">
+				<li><a href="http://msopentech.github.io/">Home</a></li>
 				<li><a href="https://github.com/MSOpenTech">Repositories</a></li>
 				<li><a href="http://msopentech.com">MS OpenTech</a></li>
 				<li><a href="https://github.com/MSOpenTech?tab=members">Members</a></li>
@@ -30,50 +30,44 @@
 </div><!-- page-wrap -->
 			<div class="resources group">
 				<div class="resource-cat">
-					<h3>resource title</h3>
+					<h3>Social Media</h3>
 					<ul>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
+						<li><a href="http://msopentech.com/blog">Blog</a></li>
+						<li><a href="http://www.facebook.com/msopentech" rel="me" title="Like us on Facebook" target="_blank">Facebook page</a></li>
+						<li><a href="http://twitter.com/openatmicrosoft" target="_blank">Twitter</a></li>
 					</ul>
 				</div><!-- resource cat -->	
 
 				<div class="resource-cat">
-					<h3>resource title</h3>
+					<h3>Developers</h3>
 					<ul>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
+						<li><a href="http://channel9.msdn.com/interoperability/" target="_blank">Channel 9</a></li>
+						<li><a href="http://www.codeplex.com/site/users/view/MSOpenTech" target="_blank">CodePlex</a></li>
+						<li><a href="https://github.com/msopentech" target="_blank">GitHub</a></li>
+						<li><a href="http://www.modern.ie">modern.IE</a></li>
+						<li><a href="http://blogs.technet.com/port25" target="_blank">Port 25</a></li>
+						<li><a href="http://www.webplatform.org/">Web Platform Docs</a></li>
 					</ul>
 				</div><!-- resource cat -->	
 
 				<div class="resource-cat">
-					<h3>resource title</h3>
+					<h3>Standards</h3>
 					<ul>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
+						<li><a href="http://www.dmtf.org/" target="_blank">DMTF</a></li>
+						<li><a href="http://www.ecma-international.org/" target="_blank">Ecma</a></li>
+						<li><a href="http://www.ietf.org/" target="_blank">IETF</a></li>
+						<li><a href="https://www.oasis-open.org/" target="_blank">OASIS</a></li>
+						<li><a href="http://www.w3.org/" target="_blank">W3C</a></li>
 					</ul>
 				</div><!-- resource cat -->	
 
 				<div class="resource-cat">
-					<h3>resource title</h3>
+					<h3>Microsoft</h3>
 					<ul>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
-						<li><a href="#">stuff</a></li>
+						<li><a href="http://windows.microsoft.com/en-US/windows-8/internet-explorer">Internet Explorer</a></li>
+						<li><a href="http://www.microsoft.com/en-us/openness/default.aspx#home" target="_blank">Openness</a></li>
+						<li><a href="http://windows.microsoft.com/en-us/windows/home?woldogcb=0" target="_blank">Windows</a></li>
+						<li><a href="http://www.windowsazure.com/" target="_blank">Windows Azure</a></li>
 					</ul>
 				</div><!-- resource cat -->	
 
