adding privacy links

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 			<div class="policies group">
 				<div class="policy-links group">
 				<ul class="group">
-					<li><a href="#">contact us</a></li>
-					<li><a href="#">terms of use</a></li>
-					<li><a href="#">privacy policy</a></li>
+					<li><a href="http://msopentech.com/contact-us/" target="_blank">contact us</a></li>
+					<li><a href="http://msopentech.com/terms-of-use/" target="_blank">terms of use</a></li>
+					<li><a href="http://msopentech.com/privacy-policy/" target="_blank">privacy policy</a></li>
 				</ul>
 				</div><!-- policy links -->
 
