--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/normal.css" />
 	<link rel="stylesheet" href="css/global.css" />
 	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/msscript.js"></script>
+	<script type="text/javascript" src="js/msscript-ck.js"></script>
 </head>
 <body>
 	<div class="page-wrap group">
