adding timeline data

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="css/global.css" />
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/jquery.date-format.js"></script>
-	<script type="text/javascript" src="js/msscript-ck.js"></script>
+	<script type="text/javascript" src="js/d3.v3.min.js"></script>
+	<script type="text/javascript" src="js/msscript.js"></script>
 </head>
 <body>
 	<div class="page-wrap group">
@@ -21,7 +22,7 @@
 				<li><a href="https://github.com/MSOpenTech">Repositories</a></li>
 				<li><a href="http://msopentech.com">MS OpenTech</a></li>
 				<li><a href="https://github.com/MSOpenTech?tab=members">Members</a></li>
-				<li><a href="http://msopentech.com/blog">Blog</a></li>
+				<li><a href="timeline.html">Blog</a></li>
 			</ul>
 		</nav>
 		<div class="repository-thumbs group">
