--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			<ul class="group">
 				<li><a href="http://msopentech.github.io/">Home</a></li>
 				<li><a href="https://github.com/MSOpenTech">Repositories</a></li>
-				<li><a href="http://msopentech.com">MS OpenTech</a></li>
+				<li><a href="https://msopentech.com">MS OpenTech</a></li>
 				<li><a href="https://github.com/MSOpenTech?tab=members">Members</a></li>
-				<li><a href="timeline.html">Blog</a></li>
+				<li><a href="https://msopentech.com/blog">Blog</a></li>
 			</ul>
 		</nav>
 		<div class="repository-thumbs group">
