removing some comments

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/jquery.date-format.js"></script>
 	<script type="text/javascript" src="js/d3.v3.min.js"></script>
-	<script type="text/javascript" src="js/msscript.js"></script>
+	<script type="text/javascript" src="js/msscript-ck.js"></script>
 </head>
 <body>
 	<div class="page-wrap group">
