--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="js/msscript-ck.js"></script>
 </head>
 <body>
+This is a test page
 	<div class="page-wrap group">
 		<header>
 			<div class="logo"></div>
